[206808] cdamus - Adopt J2SE 5.0 in Validation Component