@@ -1,7 +1,7 @@
 /**
  * <copyright>
  *
- * Copyright (c) 2005 IBM Corporation and others.
+ * Copyright (c) 2005, 2007 IBM Corporation and others.
  * All rights reserved.   This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -128,6 +128,7 @@ public class ValidationUIIDEPlugin
         super(new ResourceLocator[] {});
     }
 
+    @Override
     public ResourceLocator getPluginResourceLocator() {
         return plugin;
     }
@@ -160,7 +161,8 @@ public class ValidationUIIDEPlugin
     	/**
     	 * The cached debug options (for optimization).
     	 */
-    	private static final Map cachedOptions = new HashMap();
+    	private static final Map<String, Boolean> cachedOptions =
+    	    new HashMap<String, Boolean>();
 
     	/**
     	 * Retrieves a Boolean value indicating whether tracing is enabled.
@@ -185,13 +187,12 @@ public class ValidationUIIDEPlugin
     			Boolean value = null;
     			
     			synchronized (cachedOptions) {
-    				value = (Boolean) cachedOptions.get(option);
+    				value = cachedOptions.get(option);
     	
     				if (null == value) {
     					value =
-    						new Boolean(
-    							Boolean.TRUE.toString().equalsIgnoreCase(
-    								org.eclipse.core.runtime.Platform.getDebugOption(option)));
+    						Boolean.valueOf(
+    								org.eclipse.core.runtime.Platform.getDebugOption(option));
     	
     					cachedOptions.put(option, value);
     				}
@@ -302,7 +303,7 @@ public class ValidationUIIDEPlugin
     	 */
     	public static void changing(
             String option,
-            Class clazz,
+            Class<?> clazz,
             String methodName,
             String valueDescription,
             Object oldValue,
@@ -341,7 +342,7 @@ public class ValidationUIIDEPlugin
     	 */
     	public static void catching(
     		String option,
-    		Class clazz,
+    		Class<?> clazz,
     		String methodName,
     		Throwable throwable) {
 
@@ -374,7 +375,7 @@ public class ValidationUIIDEPlugin
     	 */
     	public static void throwing(
     		String option,
-    		Class clazz,
+    		Class<?> clazz,
     		String methodName,
     		Throwable throwable) {
 
@@ -395,58 +396,6 @@ public class ValidationUIIDEPlugin
     	}
 
     	/**
-    	 * Traces the entering into the specified method of the specified class.
-    	 * 
-    	 * @param option The debug option for which to trace.
-    	 * @param clazz The class whose method is being entered.
-    	 * @param methodName The name of method that is being entered.
-    	 * 
-    	 */
-    	public static void entering(
-    		String option,
-    		Class clazz,
-    		String methodName) {
-
-    		if (shouldTrace(option)) {
-
-    			trace(
-    				PREFIX_ENTERING
-    					+ clazz.getName()
-    					+ SEPARATOR_METHOD
-    					+ methodName);
-    		}
-    	}
-
-    	/**
-    	 * Traces the entering into the specified method of the specified class,
-    	 * with the specified parameter.
-    	 * 
-    	 * @param option The debug option for which to trace.
-    	 * @param clazz The class whose method is being entered.
-    	 * @param methodName The name of method that is being entered.
-    	 * @param parameter The parameter to the method being entered.
-    	 * 
-    	 */
-    	public static void entering(
-    		String option,
-    		Class clazz,
-    		String methodName,
-    		Object parameter) {
-
-    		if (shouldTrace(option)) {
-
-    			trace(
-    				PREFIX_ENTERING
-    					+ clazz.getName()
-    					+ SEPARATOR_METHOD
-    					+ methodName
-    					+ PARENTHESIS_OPEN
-    					+ getArgumentString(parameter)
-    					+ PARENTHESIS_CLOSE);
-    		}
-    	}
-
-    	/**
     	 * Traces the entering into the specified method of the specified class,
     	 * with the specified parameters.
     	 * 
@@ -458,9 +407,9 @@ public class ValidationUIIDEPlugin
     	 */
     	public static void entering(
     		String option,
-    		Class clazz,
+    		Class<?> clazz,
     		String methodName,
-    		Object[] parameters) {
+    		Object... parameters) {
 
     		if (shouldTrace(option)) {
 
@@ -485,7 +434,7 @@ public class ValidationUIIDEPlugin
     	 */
     	public static void exiting(
     		String option,
-    		Class clazz,
+    		Class<?> clazz,
     		String methodName) {
 
     		if (shouldTrace(option)) {
@@ -510,7 +459,7 @@ public class ValidationUIIDEPlugin
     	 */
     	public static void exiting(
     		String option,
-    		Class clazz,
+    		Class<?> clazz,
     		String methodName,
     		Object returnValue) {
 
