@@ -181,6 +181,7 @@ public final class EMFModelValidationPlugin extends EMFPlugin {
 	}
 
 	// implements the inherited method
+	@Override
 	public ResourceLocator getPluginResourceLocator() {
 		return plugin;
 	}
@@ -221,6 +222,7 @@ public final class EMFModelValidationPlugin extends EMFPlugin {
 		}
 
 		// extends the inherited method
+		@Override
 		public void start(BundleContext context) throws Exception {
 			super.start(context);
 
@@ -289,7 +291,7 @@ public final class EMFModelValidationPlugin extends EMFPlugin {
     	/**
     	 * The cached debug options (for optimization).
     	 */
-    	private static final Map cachedOptions = new HashMap();
+    	private static final Map<String, Boolean> cachedOptions = new HashMap<String, Boolean>();
 
     	/**
     	 * Retrieves a Boolean value indicating whether tracing is enabled.
@@ -314,13 +316,12 @@ public final class EMFModelValidationPlugin extends EMFPlugin {
     			Boolean value = null;
     			
     			synchronized (cachedOptions) {
-    				value = (Boolean) cachedOptions.get(option);
+    				value = cachedOptions.get(option);
     	
     				if (null == value) {
     					value =
-    						new Boolean(
-    							Boolean.TRUE.toString().equalsIgnoreCase(
-    								org.eclipse.core.runtime.Platform.getDebugOption(option)));
+    						Boolean.valueOf(
+    								org.eclipse.core.runtime.Platform.getDebugOption(option));
     	
     					cachedOptions.put(option, value);
     				}
@@ -431,7 +432,7 @@ public final class EMFModelValidationPlugin extends EMFPlugin {
     	 */
     	public static void changing(
             String option,
-            Class clazz,
+            Class<?> clazz,
             String methodName,
             String valueDescription,
             Object oldValue,
@@ -470,7 +471,7 @@ public final class EMFModelValidationPlugin extends EMFPlugin {
     	 */
     	public static void catching(
     		String option,
-    		Class clazz,
+    		Class<?> clazz,
     		String methodName,
     		Throwable throwable) {
 
@@ -503,7 +504,7 @@ public final class EMFModelValidationPlugin extends EMFPlugin {
     	 */
     	public static void throwing(
     		String option,
-    		Class clazz,
+    		Class<?> clazz,
     		String methodName,
     		Throwable throwable) {
 
@@ -524,58 +525,6 @@ public final class EMFModelValidationPlugin extends EMFPlugin {
     	}
 
     	/**
-    	 * Traces the entering into the specified method of the specified class.
-    	 * 
-    	 * @param option The debug option for which to trace.
-    	 * @param clazz The class whose method is being entered.
-    	 * @param methodName The name of method that is being entered.
-    	 * 
-    	 */
-    	public static void entering(
-    		String option,
-    		Class clazz,
-    		String methodName) {
-
-    		if (shouldTrace(option)) {
-
-    			trace(
-    				PREFIX_ENTERING
-    					+ clazz.getName()
-    					+ SEPARATOR_METHOD
-    					+ methodName);
-    		}
-    	}
-
-    	/**
-    	 * Traces the entering into the specified method of the specified class,
-    	 * with the specified parameter.
-    	 * 
-    	 * @param option The debug option for which to trace.
-    	 * @param clazz The class whose method is being entered.
-    	 * @param methodName The name of method that is being entered.
-    	 * @param parameter The parameter to the method being entered.
-    	 * 
-    	 */
-    	public static void entering(
-    		String option,
-    		Class clazz,
-    		String methodName,
-    		Object parameter) {
-
-    		if (shouldTrace(option)) {
-
-    			trace(
-    				PREFIX_ENTERING
-    					+ clazz.getName()
-    					+ SEPARATOR_METHOD
-    					+ methodName
-    					+ PARENTHESIS_OPEN
-    					+ getArgumentString(parameter)
-    					+ PARENTHESIS_CLOSE);
-    		}
-    	}
-
-    	/**
     	 * Traces the entering into the specified method of the specified class,
     	 * with the specified parameters.
     	 * 
@@ -587,9 +536,9 @@ public final class EMFModelValidationPlugin extends EMFPlugin {
     	 */
     	public static void entering(
     		String option,
-    		Class clazz,
+    		Class<?> clazz,
     		String methodName,
-    		Object[] parameters) {
+    		Object... parameters) {
 
     		if (shouldTrace(option)) {
 
@@ -614,7 +563,7 @@ public final class EMFModelValidationPlugin extends EMFPlugin {
     	 */
     	public static void exiting(
     		String option,
-    		Class clazz,
+    		Class<?> clazz,
     		String methodName) {
 
     		if (shouldTrace(option)) {
@@ -639,7 +588,7 @@ public final class EMFModelValidationPlugin extends EMFPlugin {
     	 */
     	public static void exiting(
     		String option,
-    		Class clazz,
+    		Class<?> clazz,
     		String methodName,
     		Object returnValue) {
 
@@ -656,11 +605,11 @@ public final class EMFModelValidationPlugin extends EMFPlugin {
     	}
     }
 
-	public static void catching(Class class1, String functionName, Throwable exception) {
+	public static void catching(Class<?> class1, String functionName, Throwable exception) {
 		Tracing.catching(EMFModelValidationDebugOptions.EXCEPTIONS_CATCHING, class1, functionName, exception);
 	}
 	
-	public static void throwing(Class class1, String functionName, Throwable exception) {
+	public static void throwing(Class<?> class1, String functionName, Throwable exception) {
 		Tracing.throwing(EMFModelValidationDebugOptions.EXCEPTIONS_THROWING, class1, functionName, exception);
 	}
 
@@ -688,7 +637,7 @@ public final class EMFModelValidationPlugin extends EMFPlugin {
 	 * 
 	 * @see org.eclipse.osgi.util.NLS
 	 */
-	public static String getMessage(String messagePattern, Object[] args) {
+	public static String getMessage(String messagePattern, Object... args) {
 		return formatMessage(messagePattern, args);
 	}
 	
@@ -703,7 +652,7 @@ public final class EMFModelValidationPlugin extends EMFPlugin {
 	 * 
 	 * @see org.eclipse.osgi.util.NLS
 	 */
-	private static String formatMessage(String messagePattern, Object[] args) {
+	private static String formatMessage(String messagePattern, Object... args) {
 		try {
 			return NLS.bind(messagePattern, args);
 		} catch (Exception e) {
@@ -733,7 +682,7 @@ public final class EMFModelValidationPlugin extends EMFPlugin {
 	 * @return the list, <code>strings[0]</code> if there is only one element,
 	 *    or <code>""</code> if the array has no elements
 	 */
-	public static String formatList(Collection items) {
+	public static String formatList(Collection<?> items) {
 		switch (items.size()) {
 			case 0 :
 				return ""; //$NON-NLS-1$
@@ -756,8 +705,8 @@ public final class EMFModelValidationPlugin extends EMFPlugin {
 	 * 
 	 * @see #formatList(Collection)
 	 */
-	private static String formatList2(Collection items) {
-		Iterator iter = items.iterator();
+	private static String formatList2(Collection<?> items) {
+		Iterator<?> iter = items.iterator();
 		int max = items.size() - 1;
 
 		final String sep = getString(
@@ -800,8 +749,8 @@ public final class EMFModelValidationPlugin extends EMFPlugin {
 	 * 
 	 * @see #formatList(Collection)
 	 */
-	private static String formatPair(Collection items) {
-		Iterator iter = items.iterator();
+	private static String formatPair(Collection<?> items) {
+		Iterator<?> iter = items.iterator();
 
 		StringBuffer result = new StringBuffer(32);
 
